kubernetes-security/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: homework
  name: homework
spec:
  finalizers:
  - kubernetes
