kubernetes-security/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  homework-security
  namespace: homework
  labels:
    app: homework-security
spec:
  selector:
    matchLabels:
      app: homework-security
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: homework-security
    spec:
      serviceAccountName: monitoring
      containers:
      - name: websrv
        image: "nginx:latest"      
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
        ports:
          - containerPort: 8000
            name:  http
        volumeMounts:
          - name: homework
            mountPath: /homework
          - name: nginxconf
            mountPath: /etc/nginx/conf.d/
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm -f /homework/index.html"]
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3      
      volumes:
        - name: homework
          persistentVolumeClaim:
            claimName: homework-security
        - name: nginxconf
          configMap:
            name: nginxconf
      securityContext:
        runAsUser: 0
