kubernetes-security/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-security
  namespace: homework
spec:
  selector:
    app: homework-security
  type: ClusterIP
  ports:
  - name: homework-security
    protocol: TCP
    port: 8000
    targetPort: 8000
